--- a/index.html
+++ b/index.html
@@ -5,9 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="first-section">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span>Mahir Afsar</span> World</h1>
+            <h3>Lorem ipsum dolor sit amet.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex sequi officia nihil consequuntur iste. Molestias assumenda fugiat saepe eligendi, odit obcaecati repudiandae enim possimus laboriosam facilis esse expedita. Enim, doloribus.</p><br>
+            <a class="link-button" target="_blank" href="">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="./images/my-pic.png" alt="">
+        </div>
+    </section>
+
+    <section class="second-section">
+        <div class="half-width">
+            <img src="./images/my-pic2.png" alt="mahir afsar picture">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p style="text-align: justify; margin-right: 50px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis provident vero et tempora distinctio asperiores quam non earum perferendis. Laborum pariatur quaerat amet distinctio neque dolor recusandae dolore, molestias laudantium.</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
     
 </body>
 </html>
