--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="first-section">
+    <section class="first-section flexible-section">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span>Mahir Afsar</span> World</h1>
@@ -24,7 +24,7 @@
         </div>
     </section>
 
-    <section class="second-section">
+    <section class="second-section flexible-section">
         <div class="half-width">
             <img src="./images/my-pic2.png" alt="mahir afsar picture">
         </div>
@@ -35,6 +35,25 @@
             <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
+
+    <section class="third-section">
+        <h1>Experiences</h1>
+        <div class="flexible-section">
+            <div id="full-stack" class="box-exp" >
+                <h1 class="heading">Full Stack Web Developer</h1>
+                <h3><span>2021-present | Baby level Developer</span></h3>
+                <p style="text-align: justify; padding-right:20px ;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis quaerat perspiciatis, quis quam possimus quibusdam nemo, quasi amet modi at vero? Reprehenderit illo laudantium, illum sapiente aliquam corporis porro ab doloribus blanditiis est odio alias similique, aspernatur dolor corrupti officiis inventore. Recusandae ab id ipsum amet, nulla asperiores illum molestiae!</p>
+            </div>
+            <div id="baby-web" class="box-exp">
+                <h1 class="heading">Baby Web Developer</h1>
+                <h3><span>2021-present | Baby level Developer</span></h3>
+                <p style="text-align: justify; padding-right:20px ;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis quaerat perspiciatis, quis quam possimus quibusdam nemo, quasi amet modi at vero? Reprehenderit illo laudantium, illum sapiente aliquam corporis porro ab doloribus blanditiis est odio alias similique, aspernatur dolor corrupti officiis inventore. Recusandae ab id ipsum amet, nulla asperiores illum molestiae!</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p style="color: rgba(63, 60, 60, 0.651); text-align: center;">@Mahir Afsar 2022,a programming hero initiative.</p>
+    </footer>
     
 </body>
 </html>
