--- a/index.html
+++ b/index.html
@@ -47,10 +47,21 @@
             <div id="baby-web" class="box-exp">
                 <h1 class="heading">Baby Web Developer</h1>
                 <h3><span>2021-present | Baby level Developer</span></h3>
-                <p style="text-align: justify; padding-right:20px ;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis quaerat perspiciatis, quis quam possimus quibusdam nemo, quasi amet modi at vero? Reprehenderit illo laudantium, illum sapiente aliquam corporis porro ab doloribus blanditiis est odio alias similique, aspernatur dolor corrupti officiis inventore. Recusandae ab id ipsum amet, nulla asperiores illum molestiae!</p>
+                <p style="text-align: justify; padding-right:20px ;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis quaerat perspiciatis, quis quam possimus quibusdam nemo, quasi amet modi at vero? Reprehenderit illo laudantium, illum sapiente     aliquam corporis porro ab doloribus blanditiis est odio alias similique, aspernatur dolor corrupti officiis inventore. Recusandae ab id ipsum amet, nulla asperiores illum molestiae!</p>
             </div>
         </div>
     </section>
+    <section class="contact-me">
+        <h1>CONTACT ME</h1>
+        <form action="">
+            <input id="fname" type="text" name="firstname" placeholder="Your name">
+            <input id="email" type="text" name="email" placeholder="Your email">
+            <input id="subject" type="text" name="subject" placeholder="Subject">
+            <textarea id="message" name="subject" placeholder="Message" style="height:150px"></textarea>
+            <input id="submit" type="submit" value="Send Message">
+        </form>
+    </section>
+
     <footer>
         <p style="color: rgba(63, 60, 60, 0.651); text-align: center;">@Mahir Afsar 2022,a programming hero initiative.</p>
     </footer>
