--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     <section class="contact-me">
         <h1>CONTACT ME</h1>
         <form action="">
-            <input id="fname" type="text" name="firstname" placeholder="Your name">
-            <input id="email" type="text" name="email" placeholder="Your email">
-            <input id="subject" type="text" name="subject" placeholder="Subject">
-            <textarea id="message" name="subject" placeholder="Message" style="height:150px"></textarea>
-            <input id="submit" type="submit" value="Send Message">
+            <input class="fname" type="text" name="firstname" placeholder="Your name">
+            <input class="email" type="text" name="email" placeholder="Your email">
+            <input class="subject" type="text" name="subject" placeholder="Subject">
+            <textarea class="message" name="subject" placeholder="Message" style="height:150px"></textarea>
+            <input class="submit" type="submit" value="Send Message">
         </form>
     </section>
 
